# Complex_Plotter

./: Cargo.toml  README.md
osx/Complex Plotter.app/Contents/: Info.plist
osx/Complex Plotter.app/Contents/MacOS/: complex_plotter
osx/Complex Plotter.app/Contents/Resources/: Complex Plotter.icns
src/: main.rs
