[package]
name = "complex_plotter"
version = "0.1.0"
edition = "2021"
authors = ["Luca Dupont <lucaskye.dupont@icloud.com>"]
description = "Complex function plotter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
macroquad = "0.4.5"
cargo-bundle = "0.6.0"
rayon = "0.10.0"

[package.metadata.bundle]
name = "Complex Plotter"
icon = ["517x517.jpg"]
identifier = "com.luca.complexplotter"
